<resources>
    <!-- Main app info -->
    <string name="app_name">Gardener</string>
    <string name="title_activity_maps">Map</string>

    <!--  Navigation Drawer Header -->
    <string name="nav_header_image_desc">Navigation header</string>
    <string name="nav_header_title">Name Surname</string>
    <string name="nav_header_subtitle">example@gmail.com</string>

    <!--  Navigation Drawer Menu -->
    <string name="menu_planned_gardens">Planned gardens</string>
    <string name="menu_my_tools">My tools</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_workers">Workers</string>
    <string name="menu_price_list">PriceList</string>
    <string name="menu_completed_gardens">Completed gardens</string>
    <string name="sub_menu_communicate">Communicate</string>
    <string name="menu_settings">App settings</string>
    <string name="menu_info_about_app">About App</string>

    <!-- Submenu in My Tools Fragment -->
    <string name="tools">Tools</string>
    <string name="equipment">Equipment</string>
    <string name="others">Others</string>

    <!-- Add Garden Fragment -->
    <string name="garden_title">Garden title:</string>
    <string name="hint_garden_title">Location - Name Surname of Client</string>
    <string name="phone">Phone:</string>
    <string name="hint_phone_number">123456789</string>
    <string name="garden">Garden</string>
    <string name="service">Service</string>
    <string name="choose_start_end_date">Select the estimated start and end date of the garden.</string>
    <string name="start_date">START DATE</string>
    <string name="end_date">END DATE</string>
    <string name="date_hint">10.04.20 – 10.05.20</string>
    <string name="choose_workplace">Select work place:</string>
    <string name="locate">Locate</string>

    <!-- Added Garden Fragment Summary -->
    <string name="sample_name_surname">Sample - Name Surname</string>
    <string name="planned_start_end_date">Estimated start&amp;end date of making garden:</string>
    <string name="workplace_location">Work place location:</string>

    <!-- Short actions -->
    <string name="confirm">Confirm</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="delete_basic_garden">Are you sure you want delete planned garden?</string>

    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="week_names">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wen</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string-array name="component_garden_names">
        <item>Basic info</item>
        <item>Description</item>
        <item>Notes</item>
        <item>Tools</item>
        <item>Equipment</item>
        <item>Others</item>
        <item>Shopping</item>
        <item>ManHours</item>
        <item>Photos</item>
    </string-array>

    <!--Toast messages-->
    <string name="empty_garden_title">Enter title of garden!</string>
    <string name="empty_phone_number">Enter correct client\'s phone!</string>
    <string name="default_period">Enter start and end date!</string>
    <string name="none_taken_snapshot">Locate work place!</string>
    <string name="fill_up_field">Fill up field!</string>
    <string name="fill_up_all_field">Fill up all fields!</string>
    <string name="fill_name_surname">Enter name and surname!</string>

    <!--Location strings-->
    <string name="location_permission_denied">This app require permission to your location, give the access.</string>
    <string name="permission_required_toast">This app needs permission to your location.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \\\'my location\\\' feature, which shows your current location on the map.</string>

    <!-- Info Fragment -->
    <string name="created_by_info">Created by Grzegorz Podwika</string>

    <!-- Settings Fragment -->
    <string name="instructions_enable_dark_title">Dark theme</string>

    <!-- Others -->
    <string name="sum_of_hours">Sum of worked hours:</string>
    <string name="workers_list">List of workers:</string>
    <string name="working_hours">Working hours</string>
    <string name="workers">Workers</string>
    <string name="make_photo">Take photo</string>
    <string name="jobs_finished">Job\'s finished</string>
    <string name="sample_text">Sample text</string>
    <string name="start_end_date">Start date — End date</string>
    <string name="to_make_in_future">In preparation</string>
    <string name="list_of_workers">List of workers:</string>
    <string name="enter_worker_name_surname">Enter worker full name</string>
    <string name="hint_name">John Smith</string>
    <string name="hour">h</string>
    <string name="hint_double">10.5</string>
    <string name="may_key">Map key:</string>
    <string name="working_days">- working days</string>
    <string name="error">Number too short</string>
    <string name="navigate">Navigate</string>
    <string name="hint_enter_address">Enter Address, City or Zip Code</string>
    <string name="description_full_photo">Full screen photo</string>
    <string name="machines">Machines</string>

    <string name="login_success">You are already logged in.</string>
    <string name="login_warning">You are not logged in.</string>
    <string name="logout">Logout</string>
    <string name="insert_success">Insert success</string>
    <string name="searching_location_error">Couldn\'t find searching location</string>


</resources>
