<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_planned_gardens"
            android:icon="@drawable/ic_planned_gardens"
            android:title="@string/menu_planned_gardens" />
        <item
            android:id="@+id/nav_my_tools"
            android:icon="@drawable/ic_shovel"
            android:title="@string/menu_my_tools" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_calendar"  />

        <item
            android:id="@+id/nav_workers"
            android:icon="@drawable/ic_group"
            android:title="@string/menu_workers" />

        <item
            android:id="@+id/nav_garden_price_list"
            android:icon="@drawable/ic_price_list"
            android:title="@string/menu_price_list" />
        <item
            android:id="@+id/nav_completed_gardens"
            android:icon="@drawable/ic_wrought_gardens"
            android:title="@string/menu_completed_gardens" />
    </group>

    <item android:title="@string/sub_menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_application"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_about_app"
                android:title="@string/menu_info_about_app" />
        </menu>
    </item>
</menu>
