<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_planned_gardens">

    <fragment
        android:id="@+id/nav_planned_gardens"
        android:name="pl.podwikagrzegorz.gardener.ui.planned_gardens.PlannedGardensFragment"
        android:label="@string/menu_planned_gardens"
        tools:layout="@layout/fragment_planned_gardens">

    </fragment>

    <fragment
        android:id="@+id/nav_my_tools"
        android:name="pl.podwikagrzegorz.gardener.ui.tools.ToolsFragment"
        android:label="@string/menu_my_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="pl.podwikagrzegorz.gardener.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_garden_price_list"
        android:name="pl.podwikagrzegorz.gardener.ui.price_list.PriceListFragment"
        android:label="@string/menu_price_list"
        tools:layout="@layout/fragment_price_list" />

    <fragment
        android:id="@+id/nav_completed_gardens"
        android:name="pl.podwikagrzegorz.gardener.ui.completed_gardens.CompletedGardensFragment"
        android:label="@string/menu_completed_gardens"
        tools:layout="@layout/fragment_completed_gardens" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="pl.podwikagrzegorz.gardener.ui.application_settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_info"
        android:name="pl.podwikagrzegorz.gardener.ui.info_about_app.InfoFragment"
        android:label="@string/menu_info_about_app"
        tools:layout="@layout/fragment_info" />
</navigation>