<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:orientation="vertical"
    android:padding="@dimen/keyline_4"
    android:minWidth="@dimen/custom_map_height"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_worker_name_surname"
        android:textColor="?attr/colorOnSurface"
        android:textAppearance="?attr/textAppearanceSubtitle1"/>


    <EditText
        android:id="@+id/editText_worker_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="@dimen/keyline_1"
        android:paddingEnd="@dimen/keyline_1"
        android:hint="@string/hint_name"
        android:inputType="textCapWords" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:iconGravity="end"
            android:layout_alignParentStart="true"
            app:icon="@drawable/ic_cancel"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add_worker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            app:icon="@drawable/ic_confirm"
            app:iconGravity="end"
            android:text="@string/confirm" />

    </RelativeLayout>

</LinearLayout>
</layout>