<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addGardenViewModel"
            type="pl.podwikagrzegorz.gardener.ui.planned_gardens.garden_to_add.AddGardenViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_container_add_garden"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/keyline_4"
        tools:context=".ui.planned_gardens.garden_to_add.AddGardenFragment">

        <!--Start-->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/garden_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            android:hint="@string/hint_garden_title"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_garden_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:text="@={addGardenViewModel.gardenTitle}"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?attr/colorOnSurface" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/textField_height"
            android:layout_marginTop="@dimen/keyline_4"
            android:gravity="center_vertical"
            android:text="@string/phone"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_phone_number"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_4"
            android:layout_marginTop="@dimen/keyline_4"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_phone_number"
            app:counterEnabled="true"
            app:counterMaxLength="9"
            app:helperTextEnabled="true"
            app:layout_constraintStart_toEndOf="@+id/materialTextView2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="9"
                android:paddingEnd="@dimen/keyline_4"
                android:text="@={addGardenViewModel.phoneNumberAsString}"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?attr/colorOnSurface" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/choose_start_end_date"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_phone_number" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton_pick_garden_date_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            android:text="@string/menu_calendar"
            app:icon="@drawable/ic_calendar_v2"
            app:iconGravity="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView_picked_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@{addGardenViewModel.periodAsString}"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toStartOf="@+id/shapeableImageView_garden_or_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchMaterial_garden_or_service"
            tools:text="@string/date_hint" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMaterial_garden_or_service"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/textField_height"
            android:layout_marginTop="@dimen/keyline_4"
            android:gravity="center_vertical"
            android:checked="@={addGardenViewModel.gardenOrService}"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@{addGardenViewModel.gardenOrServiceAsString}"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3"
            tools:text="@string/garden" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView_garden_or_service"
            android:layout_width="@dimen/image_size_small"
            android:layout_height="@dimen/image_size_small"
            android:layout_marginTop="@dimen/keyline_4"
            android:elevation="@dimen/keyline_tight"
            android:src="@{addGardenViewModel.gardenOrServiceAsDrawable}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchMaterial_garden_or_service"
            tools:src="@drawable/ic_farm" />
        <!--app:srcCompat="@{addGardenViewModel.gardenOrServiceAsDrawable}"-->


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:text="@string/choose_workplace"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView_picked_period" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton_locate_garden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/locate"
            app:icon="@drawable/ic_locate"
            app:iconGravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView_picked_localization"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/materialButton_confirm_adding_garden"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton_locate_garden"
            app:loadImageViaName="@{addGardenViewModel.uniqueSnapshotName}"
            app:srcCompat="@drawable/ic_street_map"
            tools:srcCompat="@drawable/ic_street_map" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton_confirm_adding_garden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:icon="@drawable/ic_confirm"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>