<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="basicGarden"
            type="pl.podwikagrzegorz.gardener.data.domain.BasicGarden" />

        <variable
            name="onClickListener"
            type="pl.podwikagrzegorz.gardener.ui.planned_gardens.OnClickItemListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_mcv_height"
        android:onClick="@{() -> onClickListener.onClick(basicGarden.id)}"
        android:layout_margin="@dimen/keyline_2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/keyline_2">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView_garden_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{basicGarden.gardenTitle}"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/sample_text" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView_planned_garden"
                android:layout_width="@dimen/image_size_small"
                android:layout_height="@dimen/image_size_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:loadIconIfIsGarden="@{basicGarden.garden}"
                tools:srcCompat="@drawable/ic_farm" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_4"
                android:text="@string/phone"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView_garden_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginTop="@dimen/keyline_4"
                tools:text="@string/hint_phone_number"
                android:text="@{String.valueOf(basicGarden.phoneNumber)}"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?attr/colorAccent"
                app:layout_constraintStart_toEndOf="@+id/materialTextView6"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView_garden_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_4"
                android:text="@string/start_end_date"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView_planned_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@string/date_hint"
                android:text="@{basicGarden.period.periodAsString}"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?attr/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView7" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>